chained model implemented using fast api

--- a/simplellmlcel.ipynb
+++ b/simplellmlcel.ipynb
@@ -147,8 +147,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "04d86387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import HumanMessage,SystemMessage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1a974388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = [\n",
+    "    SystemMessage(content=\"Translate the fllowing from english to french \"),\n",
+    "    HumanMessage(content=\"Hello How are you?\")\n",
+    "]\n",
+    "\n",
+    "res = s.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3e750695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "91b034d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = StrOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "40ecabbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bonjour, comment allez-vous ? \\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser.invoke(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f408e546",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bonjour ! Comment allez-vous ? \\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Lcel \n",
+    "chain = s|parser\n",
+    "chain.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "efcf3d32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ef499821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = \"Translate the following into {language}\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate(\n",
+    "    [(\"system\",temp),(\"user\",\"{text}\")]\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e50951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result =prompt.invoke({\"language\":\"french\",\"text\":\"Hello\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3adf4c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='Translate the following into french', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='Hello', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3a35da27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt|s|parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8e3cee07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bonjour \\n'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"language\":\"french\",\"text\":\"Hello\"})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "78ca68d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from langserve import add_routes\n",
+    "from dotenv import load_dotenv \n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4643681f",
    "metadata": {},
    "outputs": [],
    "source": []
